--- a/public/index.html
+++ b/public/index.html
@@ -19,18 +19,7 @@
         <meta name="google-site-verification" content="gEYpcgDyi_ydN8gEEdTUlTLNLJlVyEBjR7_XJzeCH2c" />
     </head>
     <body>
-            <div id="app"></div>
-
-        <script>(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-            m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-        ym(81326746, "init", {
-            clickmap:true,
-            trackLinks:true,
-            accurateTrackBounce:true
-        });</script>
-
-    
+        <div id="app"></div>  
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-JBZH976CPJ"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
@@ -38,9 +27,6 @@
           gtag('js', new Date());
           gtag('config', 'G-JBZH976CPJ');
         </script>
-
-
-
             <style>
                 .list_authors{
                     font-weight: 700; color: #0a0700; font-size: 18px;
@@ -64,5 +50,13 @@
                     color: #0a0700; font-size: 17px; font-weight: 700;
                 }
             </style>
+        <script>
+            if ('serviceWorker' in navigator) { window.addEventListener('load', function() { navigator.serviceWorker.register('/service-worker.js'); }); }
+              // chrome://serviceworker-internals/ 
+              // chrome://inspect/#service-workers
+        </script>
+
+
+
     </body>
 </html>
