--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,11 @@
                 }
             </style>
         <script>
-            if ('serviceWorker' in navigator) { window.addEventListener('load', function() { navigator.serviceWorker.register('/service-worker.js'); }); }
+            if ('serviceWorker' in navigator) { 
+                window.addEventListener('load', function() { 
+                    navigator.serviceWorker.register('/sw2.js');
+                 });
+                }
               // chrome://serviceworker-internals/ 
               // chrome://inspect/#service-workers
         </script>
