--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="/css/easy-responsive-shortcodes.css" type="text/css" media="all">
         <title>Семен Скрепецкий</title>
         <meta name="google-site-verification" content="gEYpcgDyi_ydN8gEEdTUlTLNLJlVyEBjR7_XJzeCH2c" />
+        <meta name="theme-color" content="#FFFFFF">
     </head>
     <body>
         <div id="app"></div>  
